--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -10,7 +10,7 @@ on:
   discussion:
     types: [created]
   pull_request:
-    branches: [main]
+    branches: [main2]
     types: [opened, closed, synchronize, review_requested]
 
 jobs:
